# DYHT-TAURI-short

./: .gitignore  BUILD_FIX_SUMMARY.md  Dwight  ENHANCED_FEATURES.md  INSTALLATION.md  QUICKSTART.md  README.md  SETUP.md  build.sh  index.html  launch-linux.sh  launch-macos.sh  launch-windows.bat  package-lock.json  package.json  readme.txt  tsconfig.json  vite.config.js
public/: index.html
src/: App.tsx  global.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  ai_models.rs  database.rs  main.rs  python_integration.rs  vision.rs  whisper.rs
src/components/: AudioTrimmer.tsx  AudioinputPanel.tsx  CircularWaveform.tsx  CoolDashboardMockup.tsx  DraggableDwightPanel.tsx  DwightAudioDashboard.tsx  ImageDescriptionPanel.tsx  Layout.tsx  Recorder.tsx  Transcript.tsx  TranscriptHistory.tsx  TranscriptionPanel.tsx  UserPreferredMockup.tsx  Waveform.tsx  the ui mock up.txt
src/db/: browser.ts  drizzle.ts  index.ts  schema.ts
src/hooks/: useAudioBuffer.ts  useAudioRecorder.ts  useTranscription.ts  useWhisper.ts
src/utils/: audio.ts  cloudBackground.ts  tauri-api.ts
