[package]
name = "dwight-tauri"
version = "0.1.0"
description = "Privacy-first desktop agent for audio sensing, transcription, and event logging."
authors = ["Kelly Garnett"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["shell-open", "api-all"] }

[features]
# by default Tauri runs in production mode
# when `cargo tauri dev` runs it is executed with `cargo-args "-- --dev"`
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]