[package]
name = "dwight-tauri"
version = "0.1.0"
description = "Privacy-first desktop agent for audio sensing, transcription, and event logging"
authors = ["Kelly Garnett"]
license = "MIT"
repository = "https://github.com/dyhtcreator/DYHT-TAURI-short"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# For audio processing and transcription
cpal = "0.15"
hound = "3.5"

# For database
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
