[package]
name = "dwight-tauri"
version = "0.1.0"
description = "Privacy-first desktop agent for audio sensing, transcription, and event logging"
authors = ["Kelly Garnett"]
license = "MIT"
repository = "https://github.com/dyhtcreator/DYHT-TAURI-short"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# For audio processing and transcription
cpal = "0.15"
hound = "3.5"

# For database
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# For AI and ML capabilities
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
candle-datasets = "0.9"
tch = { version = "0.13", optional = true }

# For HTTP requests to AI APIs
reqwest = { version = "0.11", features = ["json"] }

# For Python integration
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }
pyo3-asyncio = { version = "0.20", optional = true }

# For improved async handling
anyhow = "1.0"
thiserror = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
python-integration = ["pyo3", "pyo3-asyncio"]
pytorch = ["tch"]
full-ai = ["python-integration", "pytorch"]
